--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 
         <section class="hero section">
             <div class="container">
+
                 <h1 class="hero-title"> Effective Solutions for Your Business</h1>
                 <button type="button" class="hero-btn">Order Service</button>
+
             </div>
         </section>
         <!--Секція опису особливостей студії-->
@@ -58,6 +60,11 @@
                 <h2 hidden class="main-feature">Feature</h2>
                 <ul class="features-nt list">
                     <li class="features-item">
+                        <div class="frame-icon">
+                            <svg class="features-icon">
+                                <use href="./images/icons.svg#icon-antenna-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Strategy</h3>
                         <p class="feature-text">Our goal is to identify the business problem to walk away with the
                             perfect and
@@ -65,6 +72,11 @@
                         </p>
                     </li>
                     <li class="features-item">
+                        <div class="frame-icon">
+                            <svg class="features-icon">
+                                <use href="./images/icons.svg#icon-clock-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Punctuality</h3>
                         <p class="feature-text">Bring the key message to the brand's audience for the best price within
                             the
@@ -74,6 +86,11 @@
                         </p>
                     </li>
                     <li class="features-item">
+                        <div class="frame-icon">
+                            <svg class="features-icon">
+                                <use href="./images/icons.svg#icon-diagram-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Diligence</h3>
                         <p class="feature-text">Research and confirm brands that present the strongest digital growth
                             opportunities
@@ -81,6 +98,11 @@
                             risk.</p>
                     </li>
                     <li class="features-item">
+                        <div class="frame-icon">
+                            <svg class="features-icon">
+                                <use href="./images/icons.svg#icon-astronaut-1"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Technologies</h3>
                         <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep
                             passion
@@ -119,6 +141,36 @@
                         <div class="tl-ph">
                             <h3 class="card-title">Mark Guerrero</h3>
                             <p class="card-text">Product Designer</p>
+                            <ul class="social-list list">
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="24">
+                                            <use href="./images/icons.svg#icon-Inst"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="member">
@@ -126,6 +178,36 @@
                         <div class="tl-ph">
                             <h3 class="card-title">Tom Ford</h3>
                             <p class="card-text">Frontend Developer</p>
+                            <ul class="social-list list">
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="24">
+                                            <use href="./images/icons.svg#icon-Inst"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="member">
@@ -133,6 +215,36 @@
                         <div class="tl-ph">
                             <h3 class="card-title">Camila Garcia</h3>
                             <p class="card-text">Marketing</p>
+                            <ul class="social-list list">
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="24">
+                                            <use href="./images/icons.svg#icon-Inst"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="member">
@@ -140,20 +252,142 @@
                         <div class="tl-ph">
                             <h3 class="card-title">Daniel Wilson</h3>
                             <p class="card-text">UI Designer</p>
+                            <ul class="social-list list">
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="24">
+                                            <use href="./images/icons.svg#icon-Inst"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="social-item">
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
 
+        <section class="customers section">
+            <div class="container">
+                <h2 class="title">Customer</h2>
+                <ul class="customer-list list">
+                    <li class="customer-item">
+                        <a href="#" class="cust-link link">
+                            <svg class="icon-cust" widht="104" height="56">
+                                <use href="./images/icons.svg#icon-YaCo"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customer-item">
+                        <a href="#" class="cust-link link">
+                            <svg class="icon-cust" widht="104" height="56">
+                                <use href="./images/icons.svg#icon-Company"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customer-item">
+                        <a href="#" class="cust-link link">
+                            <svg class="icon-cust" widht="104" height="56">
+                                <use href="./images/icons.svg#icon-Company2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customer-item">
+                        <a href="#" class="cust-link link">
+                            <svg class="icon-cust" widht="104" height="56">
+                                <use href="./images/icons.svg#icon-Foster"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customer-item">
+                        <a href="#" class="cust-link link">
+                            <svg class="icon-cust" widht="104" height="56">
+                                <use href="./images/icons.svg#icon-Brand"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customer-item">
+                        <a href="#" class="cust-link link">
+                            <svg class="icon-cust" widht="104" height="56">
+                                <use href="./images/icons.svg#icon-TagLine"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                </ul>
+
+
+            </div>
+
+        </section>
+
     </main>
     <!--Футер-->
     <footer class="footer">
         <div class="container">
-            <a href="./index.html" class="logo link">web<span class="footer-logo">Studio</span></a>
-            <p class="footer-text">
-                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
+            <div class="footmain">
+                <div class="footinfo">
+                    <a href="./index.html" class="logo link">web<span class="footer-logo">Studio</span></a>
+                    <p class="footer-text">
+                        Increase the flow of customers and sales for your business with digital marketing & growth
+                        solutions.
+                    </p>
+                </div>
+                <div class="footink">
+                    <h2 class="foot-title">Social media</h2>
+                    <ul class="social-list list">
+                        <li>
+                            <a href="#" class="social-item">
+                                <svg class="socisl-list-icon" widht="24" height="24">
+                                    <use href="./images/icons.svg#icon-Inst"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-item">
+                                <svg class="socisl-list-icon" widht="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-item">
+                                <svg class="socisl-list-icon" widht="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-item">
+                                <svg class="socisl-list-icon" widht="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 
