--- a/portfolio.html
+++ b/portfolio.html
@@ -47,16 +47,16 @@
             <div class="container">
                 <h1 hidden>Project</h1>
                 <ul class="filter list">
-                    <li><button type="button" class="filter-btn">All</button></li>
-                    <li><button type="button" class="filter-btn">Web Site</button></li>
-                    <li><button type="button" class="filter-btn">App</button></li>
-                    <li><button type="button" class="filter-btn">Design</button></li>
-                    <li><button type="button" class="filter-btn">Marketing</button></li>
+                    <li><button type="button" class="filter-btn hover-shad">All</button></li>
+                    <li><button type="button" class="filter-btn hover-shad">Web Site</button></li>
+                    <li><button type="button" class="filter-btn hover-shad">App</button></li>
+                    <li><button type="button" class="filter-btn hover-shad">Design</button></li>
+                    <li><button type="button" class="filter-btn hover-shad">Marketing</button></li>
                 </ul>
 
                 <ul class="project-non list">
                     <li class="prj-item">
-                        <a href=" " class="item-project link">
+                        <a href=" " class="item-project link hover-shad">
 
                             <img src="./images/Portfolio/ProjectCard_1_1.jpg" alt="Banking app interface concept"
                                 width="360" height="300">
@@ -167,10 +167,48 @@
     <!--Футер-->
     <footer class="footer">
         <div class="container">
-            <a href="./index.html" class="logo link">web<span class="footer-logo">Studio</span></a>
-            <p class="footer-text">
-                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
+            <div class="footmain">
+                <div class="footinfo">
+                    <a href="./index.html" class="logo link">web<span class="footer-logo">Studio</span></a>
+                    <p class="footer-text">
+                        Increase the flow of customers and sales for your business with digital marketing & growth
+                        solutions.
+                    </p>
+                </div>
+                <div class="footink">
+                    <h2 class="foot-title">Social media</h2>
+                    <ul class="social-list list">
+                        <li>
+                            <a href="#" class="social-item">
+                                <svg class="socisl-list-icon" widht="24" height="24">
+                                    <use href="./images/icons.svg#icon-Inst"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-item">
+                                <svg class="socisl-list-icon" widht="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-item">
+                                <svg class="socisl-list-icon" widht="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-item">
+                                <svg class="socisl-list-icon" widht="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 
