--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </li>
                     <li class="features-item">
                         <div class="frame-icon">
-                            <svg class="features-icon" width="64">
+                            <svg class="features-icon" width="64" height="64">
                                 <use href="./images/icon.svg#icon-clock-1"></use>
                             </svg>
                         </div>
@@ -353,29 +353,29 @@
             </div>
             <div class="footink">
                 <p class="foot-title">Social media</p>
-                <ul class="social-list list">
-                    <li>
+                <ul class="social-listf list">
+                    <li class="foot-item">
                         <a href="#" class="social-item">
                             <svg class="socisl-list-icon" width="24" height="24">
                                 <use href="./images/icon.svg#icon-Inst"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="foot-item">
                         <a href="#" class="social-item">
                             <svg class="socisl-list-icon" width="24" height="24">
                                 <use href="./images/icon.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="foot-item">
                         <a href="#" class="social-item">
                             <svg class="socisl-list-icon" width="24" height="24">
                                 <use href="./images/icon.svg#icon-facebook-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="foot-item">
                         <a href="#" class="social-item">
                             <svg class="socisl-list-icon" width="24" height="24">
                                 <use href="./images/icon.svg#icon-linkedin-1"></use>
