--- a/portfolio.html
+++ b/portfolio.html
@@ -166,51 +166,50 @@
 
     <!--Футер-->
     <footer>
+        <div class="footer">
 
-        <div class="container">
-            <div class="footer">
-                <div class="footinfo">
-                    <a href="./index.html" class="logo link">web<span class="footer-logo">Studio</span></a>
-                    <p class="footer-text">
-                        Increase the flow of customers and sales for your business with digital marketing & growth
-                        solutions.
-                    </p>
-                </div>
-                <div class="footink">
-                    <p class="foot-title">Social media</p>
-                    <ul class="social-list list">
-                        <li>
-                            <a href="#" class="social-item">
-                                <svg class="socisl-list-icon" width="24" height="24">
-                                    <use href="./images/icon.svg#icon-Inst"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="social-item">
-                                <svg class="socisl-list-icon" width="24" height="24">
-                                    <use href="./images/icon.svg#icon-twitter-1"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="social-item">
-                                <svg class="socisl-list-icon" width="24" height="24">
-                                    <use href="./images/icon.svg#icon-facebook-1"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="social-item">
-                                <svg class="socisl-list-icon" width="24" height="24">
-                                    <use href="./images/icon.svg#icon-linkedin-1"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
+            <div class="footinfo">
+                <a href="./index.html" class="logo link">web<span class="footer-logo">Studio</span></a>
+                <p class="footer-text">
+                    Increase the flow of customers and sales for your business with digital marketing & growth
+                    solutions.
+                </p>
             </div>
+            <div class="footink">
+                <p class="foot-title">Social media</p>
+                <ul class="social-listf list">
+                    <li class="foot-item">
+                        <a href="#" class="social-item">
+                            <svg class="socisl-list-icon" width="24" height="24">
+                                <use href="./images/icon.svg#icon-Inst"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="foot-item">
+                        <a href="#" class="social-item">
+                            <svg class="socisl-list-icon" width="24" height="24">
+                                <use href="./images/icon.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="foot-item">
+                        <a href="#" class="social-item">
+                            <svg class="socisl-list-icon" width="24" height="24">
+                                <use href="./images/icon.svg#icon-facebook-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="foot-item">
+                        <a href="#" class="social-item">
+                            <svg class="socisl-list-icon" width="24" height="24">
+                                <use href="./images/icon.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+
         </div>
     </footer>
 
