--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     solutions.
                 </p>
             </div>
-            <div class="footink">
+            <div class="footlink">
                 <p class="foot-title">Social media</p>
                 <ul class="social-listf list">
                     <li class="foot-item">
