--- a/portfolio.html
+++ b/portfolio.html
@@ -175,7 +175,7 @@
                     solutions.
                 </p>
             </div>
-            <div class="footink">
+            <div class="footlink">
                 <p class="foot-title">Social media</p>
                 <ul class="social-listf list">
                     <li class="foot-item">
