--- a/index.html
+++ b/index.html
@@ -341,9 +341,9 @@
 
     </main>
     <!--Футер-->
-    <footer>
-        <div class="footer">
+    <footer class="footer">
 
+        <div class="footcont container">
             <div class="footinfo">
                 <a href="./index.html" class="logo link">web<span class="footer-logo">Studio</span></a>
                 <p class="footer-text">
@@ -385,8 +385,8 @@
                 </ul>
             </div>
 
-
         </div>
+
     </footer>
 
 </body>
